--- a/Application/Home/View/Panel/index.html
+++ b/Application/Home/View/Panel/index.html
@@ -40,13 +40,13 @@
 			<div class="side-left">
 				<div class="left-side-title">
 					<h3>新增控件</h3>
-					<h4>INSERT CONTROLLER</h4> 
+					<h4>INSERT CONTROLLER</h4>
 				</div>
 				<div class="left-side-body">
 					<div class="left-side-page">
 						<div class="left-side-page-bar">
-						<?php  
-							$count = count($controller_list); 
+						<?php
+							$count = count($controller_list);
 							$num = $count / 8;
 							for($i = 0; $i < $num; $i ++){
 						?>
@@ -56,11 +56,11 @@
 					</div>
 					<div class="controller-body">
 						<div class="controller-list-bar">
-							<?php 
-								for($i = 0; $i < $count;){  
+							<?php
+								for($i = 0; $i < $count;){
 							?>
 									<div class="controller-list-item">
-							<?php 		
+							<?php
 									for($j = 0; $j < 8 && $i < $count; $j ++,$i ++){
 										// echo $j .'//'.$i
 							?>
@@ -134,7 +134,7 @@
 												<span class="column-do-item column-del glyphicon glyphicon-remove"></span>
 												<span class="column-do-item column-up glyphicon glyphicon-arrow-up"></span>
 												<span class="column-do-item column-down glyphicon glyphicon-arrow-down"></span>
-												
+
 											</td>
 										</tr>
 									</volist>
@@ -146,7 +146,7 @@
 						</div>
 					</div>
 				</div>
-			</div>	
+			</div>
 			<!-- /右边栏 -->
 		</div>
 	</div>
@@ -164,7 +164,7 @@
 					<div class="list-arrow left-arrow"></div>
 					<div class="theme-list">
 						<div class="theme-item default" data-id='0'>
-							
+
 						</div>
 						<volist name='theme_list' id='vo'>
 							<div class="theme-item change-flag" data-id='{$vo.id}' addr="__THEME__/{$vo.addr}"><img src="__UPLOADS__/{$vo.savepath}{$vo.savename}"></div>
@@ -191,7 +191,7 @@
 				</div>
 			</div>
 		</div>
-		
+
 	</div>
 	<!-- /页脚 -->
 	<input id="contro-root" type="hidden" value="{:C('CONTROLLER_ROOT_PATH')}/" />
@@ -199,10 +199,12 @@
 	<input type="hidden" id="forbide-column-url" value="__CONTROLLER__/forbide_column">
 	<input type="hidden" id="del-column-url" value="__CONTROLLER__/del_column">
 	<input type="hidden" id="sort-column-url" value="__CONTROLLER__/sort_column">
-	
+
 	<input type="hidden" id="writeHtml-url" now-column="{$nowColumn.id}" value="__CONTROLLER__/writeHtml/column_id/">
 	<input type="hidden" id="writeArticle-url" value="__CONTROLLER__/writeArticle/">
 	<input type="hidden" id="readHtml-url" value="__CONTROLLER__/readHtml/column_id/">
+	<input type="hidden" id="control-widget-url" value="__CONTROLLER__/control_widget/name/">
+
 	<div id="top-alert-back">
 		<div id="top-alert" class="alert alert-warning alert-dismissible" role="alert">
 		      <button type="button" class="close"><span aria-hidden="true">×</span></button>
@@ -219,7 +221,7 @@
 			var top_alert = $('#top-alert');
 			top_alert.find(".alert-content").text(text);
 			if(type == 1){
-				top_alert.removeClass('alert-danger alert-warning').addClass('alert-success'); 
+				top_alert.removeClass('alert-danger alert-warning').addClass('alert-success');
 			}else if(type == 0){
 				top_alert.removeClass('alert-success alert-warning').addClass('alert-danger');
 			}else{
@@ -227,7 +229,7 @@
 			}
 			$('#top-alert-back').show();
 			top_alert.animate({"opacity":1},250);
-			
+
 			setTimeout(function(){
 			    $('#top-alert').find('button').click();
 			},2000);
