--- a/Application/Home/View/Panel/magic.html
+++ b/Application/Home/View/Panel/magic.html
@@ -12,22 +12,22 @@
 
 <body>
 	<div id="box">
-		<div class="pattern" va="type_a">
+		<div class="pattern" va="first">
 			<div class="hr"><img src="__P_IMAGES__/nav/Images/nav-1.png" /></div>
 		</div>
-		<div class="pattern" va="type_b">
+		<div class="pattern" va="second">
 			<div class=""><img src="__P_IMAGES__/nav/Images/nav-2.png" /></div>
 		</div>
-		<div class="pattern" va="type_c">
+		<div class="pattern" va="third">
 			<div class=""><img src="__P_IMAGES__/nav/Images/nav-3.jpg" /></div>
 		</div>
-		<div class="pattern" va="type_d">
+		<div class="pattern" va="forth">
 			<div class=""><img src="__P_IMAGES__/nav/Images/nav-4.jpg" /></div>
 		</div>
-		<div class="pattern" va="type_e">
+		<div class="pattern" va="fifth">
 			<div class=""><img src="__P_IMAGES__/nav/Images/nav-5.jpg" /></div>
 		</div>
-		<div class="pattern" va="type_f">
+		<div class="pattern" va="sixth">
 			<div class=""><img src="__P_IMAGES__/nav/Images/nav-6.jpg" /></div>
 		</div>
 	</div>
