--- a/Application/Home/View/Theme/theme.html
+++ b/Application/Home/View/Theme/theme.html
@@ -13,19 +13,19 @@
 		<link rel="stylesheet" type="text/css" id="theme-css" href="__USERFILES__/Public/Theme/{$theme}/theme.css">
 		<script type="text/javascript" id="theme-js" src="__USERFILES__/Public/Theme/{$theme}/theme.js"></script>
 	</empty>
-	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/PicturesShow/PicPhoneShow.css">
+	<!-- <link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/PicturesShow/PicPhoneShow.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/article_list/article_list_show_all.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/image_text/image_text_show_all.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/article_sort/article_sort_show.css">
-	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/nav/nav_all.css">
+	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/nav/nav_all.css"> -->
 
 	<script type="text/javascript" src='__USERFILES__/Public/Static/jquery-2.0.3.min.js'></script>
     <script type="text/javascript" src='__USERFILES__/Public/Static/bootstrap/js/bootstrap.js'></script>
 	<script type="text/javascript" src='__USERFILES__/Public/Theme/Public/index.js'></script>
 	<script type="text/javascript" src='__JS__/panel/drag.js'></script>
-	<script type="text/javascript" src='__USERFILES__/Public/Controller/Viwepager/viwepagerPhone.js'></script>
+	<!-- <script type="text/javascript" src='__USERFILES__/Public/Controller/Viwepager/viwepagerPhone.js'></script>
 	<script type="text/javascript" src='__USERFILES__/Public/Controller/PicturesShow/PicPhoneShow.js'></script>
-    <script type="text/javascript" src='__USERFILES__/Public/Controller/article_list/article_list.js'></script>
+    <script type="text/javascript" src='__USERFILES__/Public/Controller/article_list/article_list.js'></script> -->
 </head>
 <body>
 	<div class="side main">
@@ -51,7 +51,7 @@
 			</volist>
 		</div>
 		<div class="nav-move nav-move-right"></div>
-	</div>  
+	</div>
 	<div class="header main">
 		<div class="menu-button"></div>
 		<h1>{$site_name}</h1>
