--- a/Application/Home/View/Widget/Magic/one_theme.html
+++ b/Application/Home/View/Widget/Magic/one_theme.html
@@ -1,6 +1,7 @@
-<div style='display: inline-block;' class='controller show_nav_{$theme_name}' data-name='{$cname}'>
+<script type="text/javascript"></script>
+<div style='display: inline-block;' class='controller show_nav' data-name='{$cname}'>
   <volist id="vo" name="nav_list" key="key">
-    <div class="nav_all nav-{$key%6}">
+    <div class="nav_all nav">
       <a href="{$vo.url}">
         <div style="background-image: url({$vo.img})"></div>
         <p>{$vo.name}</p>
