--- a/Application/Home/View/Widget/ArticleList/one_theme.html
+++ b/Application/Home/View/Widget/ArticleList/one_theme.html
@@ -1,34 +1,29 @@
 <div class='article_list_container0 controller' data-id='"+$('#controller-id').val()+"'>
-<div class='controller-title'>"+$(".setting input:first").val()+"<br><span>News</span></div>
-<div class='article_info'>
-	<ul class='article_list'>
-	<foreach name="data" item="item">
-		<empty name="item.savepath">
-			img_src = $("#home_img").val()+"/article/"+"default.jpg
-		</empty>
-		<noempty>
-			img_src = img_url+data[i].savepath+data[i].savename;
-		</noempty>
-	</foreach>
-	for (var i = 0; i < length; i++) {
-		if (i == 0) {
-			<li><a class='article-link main_article' href'"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'>
-			<div class='first_article' style='background-image:url("+img_src+"); background-repeat: no-repeat; background-size:cover'>
-			<div class='article_title'>"+data[i].title+"</div>"
-		} else {
-			<li><a class='article-link sub_article' href='"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'>
-				<div class='article_text'>
-					<ul><li class='article_title'>" + data[i].title + "</li></ul>;
-				</div>
-				<div class='img_container'>
-					<img src="+img_src+">
-				</div>
-		}
-		</a></li>
-		if (i != length-1) {
+	<div class='controller-title'>
+		<span>News</span>
+	</div>
+	<div class='article_info'>
+		<ul class='article_list'>
+		<foreach name="article_info" item="item">
+			{$item|dump}
+			<li><a class='article-link main_article' href="column_url" data-url='article_url+data[i].id+&column_id=+column_id+'>
+			<div class='first_article' style="background-image:url({$item['savepath']}{$item['savename']}); background-repeat: no-repeat; background-size:cover'">
+			<div class='article_title'>"{$item['title']}</div>"
+			<li>
+				<a class='article-link sub_article' href='"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'>
+					<div class='article_text'>
+						<ul><li class='article_title'>"{$item['title']}"</li></ul>
+					</div>
+					<div class='img_container'>
+						<img src="+img_src+">
+					</div>
+				</a>
+			</li>
+
 			<hr />
+		</foreach>
 		}
-	}
-	</ul>
-</div></div>
+		</ul>
+	</div>
+	</div>
 </div>
