--- a/Application/Home/View/Widget/ArticleList/first_theme.html
+++ b/Application/Home/View/Widget/ArticleList/first_theme.html
@@ -8,21 +8,19 @@
 			{$item|dump}
 			<li><a class='article-link main_article' href="column_url" data-url='article_url+data[i].id+&column_id=+column_id+'>
 			<div class='first_article' style="background-image:url({$item['savepath']}{$item['savename']}); background-repeat: no-repeat; background-size:cover'">
-			<div class='article_title'>"{$item['title']}</div>"
+			<div class='article_title'>{$item['title']}</div>"
 			<li>
 				<a class='article-link sub_article' href='"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'>
 					<div class='article_text'>
-						<ul><li class='article_title'>"{$item['title']}"</li></ul>
+						<ul><li class='article_title'>{$item['title']}</li></ul>
 					</div>
 					<div class='img_container'>
-						<img src="+img_src+">
+						<img src="__UPLOADS__/{$item['savepath']}{$item['savename']}">
 					</div>
 				</a>
 			</li>
-
 			<hr />
 		</foreach>
-		}
 		</ul>
 	</div>
 	</div>
