--- a/Application/Home/View/Widget/ArticleList/second_theme.html
+++ b/Application/Home/View/Widget/ArticleList/second_theme.html
@@ -1,38 +1,23 @@
-<div class='article_list_container2 controller' data-id='"+$('#controller-id').val()+"'>
-    <div class='controller-title'>+$(".setting input:first").val()+"</div>
-    <div class='article_info'>
-        <div class='navText'>
-            <div class = 'article_list'>
-                <div>
-                <div class='row'></div>
-                    <span class='article_title style3'> + data[i].title + "</span>
-                </div>
-            </div>
-        </div>
-    <div class='textContent'>
-        <a class='article-link' href='"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'></a>
+<div class='article_list_container3 controller' data-id='"+$('#controller-id').val()+"'>
+    <div class='controller3-title'>+$(".setting input:first").val()+"<br><span>News</span></div>
+    <div class='article_info3'>
+        <ul class='article_list3'>
+        <volist name="article_info" id="item">
+            <li>
+                <a class='article-link' href='"+column_url+".html' data-url='"+article_url+{$item['id']}+"&column_id="+column_id+"'>
+                    <div class='article_text3'>
+                        <ul><li class='article_title3'> + {$item['title']}.title + "</li></ul>
+                        <div class='article_content3'> +{$item['content']} + "</div>
+                    </div>
+                    <div class='img_container3'>
+                        <img src="+img_src+">
+                    </div>
+                </a>
+            </li>
+            <if condition="$key lt count($article_info) - 1">
+                <hr />
+            </if>
+        </volist>
+        </ul>
     </div>
-    <div class='detail'>
-        <img src="+img_src+">
-        <a class='article-link' href='"+column_url+".html' data-url='/microWeb/index.php/Home/Panel/article_info/column_id/"+column_id+"'></a>
-    </div>
-    <div class='detail'>
-        <img src="+img_src+">
-        <a style='display:none' class='article-link' href='"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'></a>
-    </div>
-    <div class='detail'>
-        <img src="+img_src+">
-    <a style='display=none' class='article-link' href='"+column_url+".html' data-url='/microWeb/index.php/Home/Panel/article_info/column_id/"+column_id+"'></a>
-    </div>
-    <div class='detail'>
-        <img src="+img_src+">
-        <div class='article_content'> + data[i].content + "...</div>
-    </div>
-    data[i].content
-    </div>
-    </a>
-    </div>
-    <div class='clear_float'></div>
-    </div>
-    <div class='clear_float'>
 </div>
