--- a/Public/Home/Widget/ArticleList/css/first_article_list.css
+++ b/Public/Home/Widget/ArticleList/css/first_article_list.css
@@ -1,71 +1,68 @@
-*{
+.article_list_container0{
+	
+}
+.article_list_container0 .controller-title {
+
+}
+.article_list_container0 .article_info {
+
+}
+.article_list_container0 .article_info .article_list{
+	margin-bottom: 0;
+}
+.article_list_container0 .article_list>hr {
 	margin: 0;
-	padding: 0;
 }
-.article_list_container{
-	background-image: url("/microWeb/Public/Home/Images/article/background.jpg");
-	width:100%;
+.article_list_container0 .article-link {
+
 }
-.article_list{
-	list-style: none;
+.article_list_container0 .article_text {
+
 }
-.article_container>h4{
-	height: 2rem;
-	line-height: 2rem;
-	color: white;
-	text-indent: 1em;
-}
-.rec {
+.article_list_container0 .img_container{
+	width: 20%;
+	height: 2.5rem;
+	float: right;
 	display: inline-block;
-	width: 3px;
-	margin-top: 0.25rem;
-	height: 1.5rem;
-	background-color: #F3E7BA; 
 }
-.article_list>li{
-	/*background-color: #E7E5D8;*/
-}
-.article_list>li:hover{
-	background-color: #98B7C4;
-}
-.article_list>li>a{
-	vertical-align: middle;
-	text-decoration: none;
-	color: black;
-	display: inline-block;
+.article_list_container0 .img_container>img{
 	width: 100%;
-	font-size: 0.7rem;
-	line-height: 2.5rem;
-	height: 2.5rem;
-	padding: 0 3%;
+	height: 2.0rem;
 }
-.article_list>li>a:hover{
-	text-decoration: none;
-	color: black;
+.article_list_container0 .first_article{
+	width: 100%;
+	height: 5.0rem;
+	position: relative;
 }
-.article_list>li>a>img{
-	display: block;
-	float: left;
-	width: 25%;
-	height: 2.5rem;
-	padding: 0 1%;
-}
-.article_title{
-	font-size: 0.7rem;
-	display: block;
-	width: 28%;
-	height: 2.5rem;
+.article_list_container0 .first_article .article_title{
+	height: 1.3rem;
+	line-height: 1.3rem;
+	width: 100%;
+	position: absolute;
+	background-color: rgba(59, 62, 54, 0.5);
+	bottom: 0;
+	color: white;
+	font-size: 0.9rem;
 	overflow: hidden;
-	white-space: nowrap;
 	text-overflow: ellipsis;
-	float: left;
+	padding: 0 5%;
 }
-.article_content{
-	font-size: 0.6rem;
-	display: block;
-	overflow: hidden;
-	white-space: nowrap;
-	text-overflow: ellipsis;
-	width: 44%;
-	height: 2.5rem;
+/* .article_list_container0 .article_list li:first-child{
+	height: 5.0rem;
+};
+.article_list_container0 .article_list li:first-child a{
+	height: 5.0rem;
+	line-height: 5.0rem;
+}
+.article_list_container0 .article_text {
+
+} */
+
+.article_list_container0 .article_list>li:first-child {
+	height: 5.0rem;
+	margin-bottom: 5px;
+}
+.article_list_container0 .article_list>li:first-child a{
+	height: 5.0rem;
+	line-height: 5.0rem;
 }
