--- a/Public/Home/Widget/ArticleList/css/second_article_list.css
+++ b/Public/Home/Widget/ArticleList/css/second_article_list.css
@@ -1,90 +1,27 @@
-*{
-	margin: 0;
-	padding: 0;
+.article_list_container3{
+    background-color: #E7E5D8;
+    /*padding: 5px;*/
+    width:100%;
 }
-
-.article_list_container2{
-    max-height: 300px;
-    overflow: auto;
-    width: 100%;
-} 
-.article_list_container2 .article_info{
-    background-color: #573341;
+.article_list_container3 hr {
+    margin: 0;
 }
-.clear_float{
-    clear: both;
+.controller3-title{
+    background-color: #F4F5E7;
+    text-align: center;
 }
-.article_list_container2 .article_list_container{
-    float: left;
-    width: 100%;
-    background: #5E3843;
-    color: white;
-    height: 230px;
-    display: inline-block;
+.controller3-title>span{
+    font-size: 0.6rem;
 }
-.article_list_container2 .article_container{
-	width:95%;
+.article_list3>li{
+    height: 2.5rem;
 }
-
-.article_list_container2 .article_title{
-    display: inline-block;
-    width: 70%;
-    overflow: hidden;
-    margin-left: 20px;
-    color: white;
-    cursor: pointer;
+.article_text3>ul{
+    list-style-type:disc;
+    margin-left: 24px;
+    margin-bottom: 5px;
 }
-.article_list_container2 .article_content{
-    margin-left: 7%;
-    height: 80%;
-    height: 120px;
-    float: left;
-}
-
-.article_list_container2 .article_list div{
-    /*width: 70%;*/
-    /*float: right;*/
-    height: 25px;
-    margin-top: 1%;
-    /*margin-right: 2%;*/
-    margin-left: 8px;
-
-}
-
-
-.article_list_container2 .navText{
-    width: 30%;
-    float: left;
-}
-.article_list_container2 .article_list{
-    float: left;
-    width: 100%;
-}
-.article_list_container2 .textContent{
-    margin-bottom: 10px;
-    width: 66%;
-    float: left;
-    background: #D195A5;
-    border-radius: 4px;
-}
-.article_list_container2 .article_info{
-    float: left;
-    width: 100%;
-    height: 80%;
-}
-.article_list_container2 .detail p{
-    text-indent: 2em;
-}
-.article_list_container2 .detail{
-    min-height: 80px;
-}
-.article_list_container2 .detail img{
-    width: 30%;
-    float: left;
-    margin-top: 5%;
-    margin-left: 5%;
-}
-.article_list_container2 .row{
+.row{
     width: 10px !important;;
     height: 10px!important;
     background-color: #EEE4B3;
@@ -92,15 +29,79 @@
     float: left!important;
     margin-top: 8px!important;
 }
-.article_list_container2 .controller-title{
-    background-color: #513241;
-    color: white;
-    text-align: center;
+.article_text3{
+    display: inline-block;
+    width: 75%;
+    float: left;
+    height: 2.5rem;
+    line-height: 2.5rem;
+    overflow: hidden;
 }
-.article_list_container2 .textContent a{
+.img_container3{
     float: right;
-    color: rgba(255, 255, 255, 0.87);
+    width: 20%;
+    height: 2.5rem;
+    display: inline-block;
 }
-.article_list_container2 .textContent a:hover{
+.img_container3>img{
+    width: 100%;
+    height: 2rem;
+}
+.article_content3{
+    text-indent: 2em;
+    line-height: 1.0rem;
+    font-size: 0.6rem;
+    height: 0.9rem;
+    width: 90%;
+    white-space: nowrap;
+    text-overflow: ellipsis;
+    overflow: hidden;
+}
+.article_title3{
+
+    font-size: 0.7rem;
+    width: 100%;
+    height: 20px;
+    line-height: 1.5rem;
+}
+.article_container>h4{
+    height: 2rem;
+    line-height: 2rem;
+    color: white;
+    text-indent: 1em;
+}
+.rec {
+    display: inline-block;
+    width: 3px;
+    margin-top: 0.25rem;
+    height: 1.5rem;
+    background-color: #F3E7BA; 
+}
+.article_list3>li{
+    width: 100%;
+}
+.article_list3>li:hover{
+    background-color: #F4F5E7;
+}
+.article_list3>li>a{
+    vertical-align: middle;
     text-decoration: none;
+    color: black;
+    display: inline-block;
+    width: 100%;
+    font-size: 0.7rem;
+    line-height: 2.5rem;
+    height: 2.5rem;
+    padding: 0 3%;
+}
+.article_list3>li>a:hover{
+    text-decoration: none;
+    color: black;
+}
+.article_list3>li>a>img{
+    display: block;
+    float: left;
+    width: 25%;
+    height: 2.5rem;
+    padding: 0 1%;
 }
