--- a/Application/Admin/View/Reception/addController.html
+++ b/Application/Admin/View/Reception/addController.html
@@ -1,8 +1,8 @@
 <extend name="Public/base"/>
 <block name="style">
 <style type="text/css">
-   
-    .file {width:120px;position: relative;display:inline-block;background:#D0EEFF;border:1px solid #99D3F5;border-radius:4px;padding:4px 12px;overflow: hidden;color:#1E88C7;text-decoration: none;text-indent:0;line-height:20px;margin-top: 15px;}
+
+    .file,.uploadifive-button {width:100px;position: relative;display:inline-block;background:#D0EEFF;border:1px solid #99D3F5;border-radius:4px;padding:4px 12px;overflow: hidden;color:#1E88C7;text-decoration: none;text-indent:0;line-height:20px;margin-top: 15px;}
     .file input {width: 100px; position: absolute;font-size:100px;right:0;top:0;opacity:0;}
     .textarea{width: 35%;}
     #into_img{
@@ -31,12 +31,30 @@
         color: red;
         display: none;
     }
+    .old_effect_img,.effect_img{
+        border-radius: 0.5em;
+        margin:0 2px;
+        width: 140px;
+    }
+    #into_effect_img .button{
+        position: absolute;
+        margin-left: 123px;
+        margin-top: 5px;
+        color: red;
+        cursor: pointer;
+        background: gainsboro;
+        width: 14px;
+        text-align: center;
+        line-height: 14px;
+        border-radius: 3px;
+        display: none;
+    }
 </style>
 </block>
 
 <block name="body">
     <div class="main-title">
-        <h2>{$modular}</h2><?php echo session("flash_error");?>
+        <h2 id="seat-id" data="{$list.id}">{$modular}</h2><?php echo session("flash_error");?>
         {$er}
     </div>
     
@@ -65,7 +83,7 @@
         </div>
         <div class="form-item" style="width:100%;height:100px;">
             <div style="width:200px;height:100px;float:left;overflow:hidden;">
-                <a href="javascript:;" class="file">请选择添加效果图<input type="file" name="upfile" id="upload"></a>
+                <a href="javascript:;" class="file">请选择添加图标<input type="file" name="upfile" id="upload"></a>
                 <!--<a href="javascript:;" class="file" id="readAsDataURL" onclick="showDataByURL();">预览效果图</a>    -->
             </div>
             <div id="into_img">
@@ -74,6 +92,27 @@
                 </if>
             </div>
         </div>
+
+        <div class="form-item effect_img_div" style="width:100%;height:100px;">
+            <div style="width:200px;height:100px;float:left;overflow:hidden;">
+                <form>
+                    <input id="file_upload" name="file_upload" type="file" multiple="true">
+                </form>
+                <!--<a href="javascript:;" class="file">选择添加效果图<input type="file" multiple="true" name="upfile_effect" id="upload_effect"></a>-->
+                <!--<a href="javascript:;" class="file" id="readAsDataURL" onclick="showDataByURL();">预览效果图</a>    -->
+            </div>
+            <div style="display: inline-block;" id="into_effect_img">
+                <if condition="$effect_img != '' ">
+                    <foreach name="effect_img" item="vo">
+                        <div class="effect_img_div" style="display: inline-block;">
+                            <div class="button">x</div>
+                            <img theme="{$vo.id}" class="old_effect_img" src="__ROOT__/Uploads/{$vo.savepath}/{$vo.savename}">
+                        </div>
+                    </foreach>
+                </if>
+            </div>
+        </div>
+
         <div class="form-item">
             <button class="btn submit-btn" id="submit" type="submit" target-form="form-horizontal">确 定</button>
             <button class="btn btn-return" onclick="javascript:history.back(-1);return false;">返 回</button>
@@ -83,6 +122,7 @@
 
 <block name="script">
 <script type="text/javascript">
+
     var old_img = $("#old_img").attr("src");
     if(old_img != undefined){
         $("#into_img").show();
@@ -96,7 +136,7 @@
     }
 
     //导航高亮
-    highlight_subnav('{:U('Reception/widget')}');
+    highlight_subnav('{:U("Reception/widget")}');
 
     setTimeout(function(){
         $(".alert").remove();
@@ -112,12 +152,90 @@
                 var urlData = this.result;
                 $("#into_img").show();
                 $("#old_img").remove();
-                document.getElementById("into_img").innerHTML += "<img src='" + urlData + "' alt='" + resultFile.name + "'/>";
-            }; 
+                document.getElementById("into_img").innerHTML += "<img id='old_img' src='" + urlData + "' alt='" + resultFile.name + "'/>";
+            };
         }else{
             return;
         }
     }
+
+    //添加效果图
+    <?php $timestamp = time();?>
+    $(function() {
+        $id = $("#seat-id").attr("data");
+        if(!$id){
+            $(".effect_img_div").remove();
+        }
+        var res = false;   //判断是否是修改
+        var num = $(".old_effect_img").length;
+        if(num == 3){
+            res=true;
+        }
+        var img_num;//允许上传图片数
+        if(num==0||num==3){
+            img_num = 3;
+        }else{
+            img_num = 3-num;
+        }
+        $('#file_upload').uploadifive({
+            'multi'    : false,
+            'auto'             : true,
+            'checkScript'      : '__PUBLIC__/Static/uploadifive/check-exists.php',
+            'formData'         : {
+                'timestamp' : '<?php echo $timestamp;?>',
+                'token'     : '<?php echo md5("unique_salt" . $timestamp);?>'
+            },
+            'buttonText'       : "效果图("+num+"/3张)",
+            'queueID'          : 'into_effect_img',
+            'queueSizeLimit'   : img_num,
+            'uploadScript'     : '__APP__/Admin/Reception/upload/id/'+$id+'/old_img/'+res,
+            'onUploadComplete' : function(file, data) {
+                $(".uploadifive-queue-item").remove();
+                var res_data = JSON.parse(data);
+                if(res_data.theme_id=="no"){
+                    alert("已存在");
+                    window.updateAlert("已存在" ,'alert-error');
+                }else if(res_data=='false'){
+                    aletr("上传失败");
+                    window.updateAlert("上传失败" ,'alert-error');
+//                    var that = document.getElementById("into_effect_img");
+//                    $(".uploadifive-queue-item").remove();
+//                    var res_data = JSON.parse(data);
+//                    var urlData = '__ROOT__/Uploads/'+res_data.Filedata.savepath + res_data.Filedata.savename;
+//                    that.innerHTML += "<div class='effect_img_div' style='display: inline-block;'>" +
+//                            "<div class='button' style='display: none;'>x</div>" +
+//                            "<img theme="+res_data.theme_id+" class='effect_img' src='" + urlData + "'/></div>";
+//                    if(res){
+//                        $("#into_effect_img").find(".effect_img_div").eq(0).remove();
+//                    }else{
+//                        num++;
+//                    }
+//                    if(num==3){
+
+//                    }
+                }else{
+                    window.location.reload();
+                }
+            }
+        });
+    });
+
+    $(document).on("mouseover",".effect_img_div",function(){
+        $(this).children(".button").show();
+    })
+    $(document).on("mouseout",".effect_img_div",function(){
+        $(this).children(".button").hide();
+    })
+
+    $(document).on("click",".button",function(){
+        var that = $(this);
+        var theme_id = that.next().attr("theme");
+        $.post("__CONTROLLER__ /delete_theme",{theme_id:theme_id},function(data){
+            if(data=="ok"){
+                window.location.reload();
+            }
+        })
+    })
     /*
      * 判断不能为空
      * 控件名、链接地址
