--- a/Application/Home/View/Widget/ArticleList/first_theme.html
+++ b/Application/Home/View/Widget/ArticleList/first_theme.html
@@ -1,19 +1,19 @@
-<div class='article_list_container0 controller' data-id='"+$('#controller-id').val()+"'>
+<div class='article_list_container0 controller' data-id="{$cname}">
 	<div class='controller-title'>
-		<span>News</span>
+		{$option['title']}
 	</div>
 	<div class='article_info'>
 		<ul class='article_list'>
 		<volist name="article_info" id="item">
 		<if condition="$key eq 0">
 			<li>
-				<a class='article-link main_article' href'"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'>
+				<a class='article-link main_article' href="{$option['column_url']}.html" data-url="{$option['article_url']}{$item['id']}/column_id/{$item['column_id']}">
 				<div class='first_article' style="background-image:url({$item['savepath']}{$item['savename']}); background-repeat: no-repeat; background-size:cover">
 					<div class='article_title'>{$item['title']}</div>
 				</div>
 		<else/>
 			<li>
-				<a class='article-link sub_article' href='"+column_url+".html' data-url='"+article_url+data[i].id+"&column_id="+column_id+"'>
+				<a class='article-link sub_article' href="{$option['column_url']}.html" data-url="{$option['article_url']}{$item['id']}/column_id/{$option['column_id']}">
 				<div class='article_text'>
 					<ul><li class='article_title'>{$item['title']}</li></ul>
 				</div>
