--- a/Application/Home/View/Panel/banner.html
+++ b/Application/Home/View/Panel/banner.html
@@ -40,6 +40,8 @@
     <!--{$controller-id}-->
     <input type="hidden" id="controller-id" value="{$controllerId}" />
     <input type="hidden" id="status" value="{$status}">
+    <input type="hidden" id="save-url" value="{:U('Panel/save_widget')}">
+    
     <!--<div id="top-alert-back">-->
         <!--<div id="top-alert" class="alert alert-warning alert-dismissible" role="alert">-->
             <!--<button type="button" class="close_hint"><span aria-hidden="true">×</span></button>-->
