修改为使用save_widget方法

--- a/Application/Home/View/Panel/notice.html
+++ b/Application/Home/View/Panel/notice.html
@@ -72,6 +72,7 @@
     </div>
     <input type="hidden" id="controller-id" value="{$controllerId}" />
     <input type="hidden" id="status" value="{$status}">
+    <input type="hidden" id="save_widget" value="{:U('Panel/save_widget')}">
     <!--<div id="top-alert-back">-->
         <!--<div id="top-alert" class="alert alert-warning alert-dismissible" role="alert">-->
             <!--<button type="button" class="close_hint"><span aria-hidden="true">×</span></button>-->
