--- a/Application/Home/View/Widget/PicturesShow/PicturesShow_theme.html
+++ b/Application/Home/View/Widget/PicturesShow/PicturesShow_theme.html
@@ -1,4 +1,4 @@
-<div style='width: 100%;display: inline-block;min-height: 240px;overflow: hidden;' class='controller' data-name='{$controllerName}'>
+<div class='controller' data-name='{$controllerName}'>
     <div class='controller-title'>{$title}</div>
     <if condition="$type eq 3">
         <div class='picShowList'>
