--- a/Application/Home/View/Widget/viwepager/viwepager_theme.html
+++ b/Application/Home/View/Widget/viwepager/viwepager_theme.html
@@ -1,5 +1,5 @@
 <!--<div class='controller-title'>{$title}</div>-->
-<div style='max-height: 230px' class='controller' data-id='"+$("#controller-id").val()+"'>
+<div style='max-height: 230px' class='controller' data-name='{$controllerName}'>
     <div id='carousel-example-generic' class='carousel slide'>
         <div class='carousel-inner' style='height:210px'>
             <div class='item active'>
