--- a/Application/Home/View/Panel/image_text.html
+++ b/Application/Home/View/Panel/image_text.html
@@ -66,6 +66,8 @@
 	</div>
 	<input id="target_url" type="hidden" name="" value="{:U('Panel/article_info')}">
 	<input id="controller-id" type="hidden" name="" value="{$controller_id}">
-	<input id="status" type="hidden" name="" value="{$status}">
+	<input type="hidden" id="controller-id" value="{$controller_id}" />
+	<input type="hidden" id="status" value="{$status}">
+	<input type="hidden" id="save-url" value="{:U('Panel/save_widget')}">
 </body>
 </html>
