--- a/Application/Home/View/Panel/magic.html
+++ b/Application/Home/View/Panel/magic.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 	<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-	<link rel="stylesheet" type="text/css" href="__P_CSS__/nav/Css/magic.css">
+	<link rel="stylesheet" type="text/css" href="__CSS__/panel/magic.css">
 	<script type="text/javascript" src='__STATIC__/jquery-2.0.3.min.js'></script>
 	<script type="text/javascript">
 		var APP = '__ROOT__';
@@ -30,11 +30,15 @@
 		<div class="pattern" va="sixth">
 			<div class=""><img src="__P_IMAGES__/nav/Images/nav-6.jpg" /></div>
 		</div>
+		<!-- <volist name = "theme_list" id="vo">
+			<div class="pattern" va="$vo.name">
+				<div class=""><img src="$vo.pic_path" /></div>
+			</div>
+		</volist> -->
 	</div>
 	<input type="hidden" id="url" value="<?php echo U('column_title');?>">
 	<input type="hidden" id="web_info" value="<?php echo session('site_id');?>">
 	<input type="hidden" id="controller-id" value="{$controllerId}" />
 	<input type="hidden" id="status" value="{$status}">
-	<input type="hidden" id="save-url" value="{:U('Panel/save_widget')}">
 </body>
 </html>
