--- a/Application/Home/View/Theme/theme.html
+++ b/Application/Home/View/Theme/theme.html
@@ -4,7 +4,13 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0,user-scalable=no" />
 	<title>index</title>
-	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Static/bootstrap/css/bootstrap.css">
+	<volist name="css" id="vo">
+		<link rel="stylesheet" type="text/css" href="{$vo}">
+	</volist>
+	<volist name="js" id="vo">
+		<script type="text/javascript" src='{$vo}'></script>
+	</volist>
+	<!-- <link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Static/bootstrap/css/bootstrap.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Theme/Public/index.css">
 	<empty name='theme '>
 		<link rel="stylesheet" type="text/css" id="theme-css" href="__USERFILES__/Public/Theme/theme-default/theme.css">
@@ -12,22 +18,24 @@
 	<else />
 		<link rel="stylesheet" type="text/css" id="theme-css" href="__USERFILES__/Public/Theme/{$theme}/theme.css">
 		<script type="text/javascript" id="theme-js" src="__USERFILES__/Public/Theme/{$theme}/theme.js"></script>
-	</empty>
+	</empty> -->
 	<!-- <link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/PicturesShow/PicPhoneShow.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/article_list/article_list_show_all.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/image_text/image_text_show_all.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/article_sort/article_sort_show.css">
 	<link rel="stylesheet" type="text/css" href="__USERFILES__/Public/Controller/nav/nav_all.css"> -->
 
-	<script type="text/javascript" src='__USERFILES__/Public/Static/jquery-2.0.3.min.js'></script>
+	<!-- <script type="text/javascript" src='__USERFILES__/Public/Static/jquery-2.0.3.min.js'></script>
     <script type="text/javascript" src='__USERFILES__/Public/Static/bootstrap/js/bootstrap.js'></script>
-	<script type="text/javascript" src='__USERFILES__/Public/Theme/Public/index.js'></script>
-	<script type="text/javascript" src='__JS__/panel/drag.js'></script>
+	<script type="text/javascript" src='__USERFILES__/Public/Theme/Public/index.js'></script> -->
+	<script type="text/javascript" src='__JS__/panel/index/drag.js'></script>
 	<!-- <script type="text/javascript" src='__USERFILES__/Public/Controller/Viwepager/viwepagerPhone.js'></script>
 	<script type="text/javascript" src='__USERFILES__/Public/Controller/PicturesShow/PicPhoneShow.js'></script>
     <script type="text/javascript" src='__USERFILES__/Public/Controller/article_list/article_list.js'></script> -->
 </head>
 <body>
+	<script type="text/javascript">window.html_json = {$html_json};</script>
+
 	<div class="side main">
 		<div class="user-bar">
 			<div class="head-icon" style="background-image:url({:C('UPLOAD_ROOT')}{$user_info.head_img})"></div>
