--- a/Public/Home/css/panel/magic.css
+++ b/Public/Home/css/panel/magic.css
@@ -22,8 +22,8 @@
 .hr{
 	width: 97%;
 	height: 95%;
-	-moz-border-image:url(../Images/nav-border.png) 3 4 round;	/* Old Firefox */
-	-webkit-border-image:url(../Images/nav-border.png) 3 4 round;	/* Safari and Chrome */
-	-o-border-image:url(../Images/nav-border.png) 3 4 round;		/* Opera */
-	border-image:url(../Images/nav-border.png) 3 4 round;
+	-moz-border-image:url(../../images/panel/magic/nav-border.png) 3 4 round;	/* Old Firefox */
+	-webkit-border-image:url(../../images/panel/magic/nav-border.png) 3 4 round;	/* Safari and Chrome */
+	-o-border-image:url(../../images/panel/magic/nav-border.png) 3 4 round;		/* Opera */
+	border-image:url(../../images/panel/magic/nav-border.png) 3 4 round;
 }
