--- a/Application/Home/View/Article/set_classify.html
+++ b/Application/Home/View/Article/set_classify.html
@@ -1,4 +1,4 @@
-<extend name="base"/>
+<extend name="Website/base"/>
 <block name="style">
 	<link rel="stylesheet" type="text/css" href="__CSS__/website/set_classify.css">
 </block>
@@ -39,12 +39,12 @@
 </block>
 <block name="other">
 	<!-- 模态框（Modal） -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
 	   aria-labelledby="myModalLabel" aria-hidden="true">
 	   <div class="modal-dialog">
 	      <div class="modal-content">
 	         <div class="modal-header">
-	            <button type="button" class="close" 
+	            <button type="button" class="close"
 	               data-dismiss="modal" aria-hidden="true">
 	                  &times;
 	            </button>
@@ -59,7 +59,7 @@
 				</div>
 	         </div>
 	         <div class="modal-footer">
-	            <button type="button" class="btn btn-default" 
+	            <button type="button" class="btn btn-default"
 	               data-dismiss="modal">关闭
 	            </button>
 	            <button id="create-new-type" type="button" target-url="__CONTROLLER__/add_type" class="btn btn-primary">
@@ -71,12 +71,12 @@
 	</div>
 	<!-- ================ -->
 	<!-- 模态框（Modal） -->
-	<div class="modal fade" id="confirm_modal" tabindex="-1" role="dialog" 
+	<div class="modal fade" id="confirm_modal" tabindex="-1" role="dialog"
 	   aria-labelledby="myModalLabel" aria-hidden="true">
 	   <div class="modal-dialog">
 	      <div class="modal-content">
 	         <div class="modal-header">
-	            <button type="button" class="close" 
+	            <button type="button" class="close"
 	               data-dismiss="modal" aria-hidden="true">
 	                  &times;
 	            </button>
@@ -92,7 +92,7 @@
 				</form>
 	         </div>
 	         <div class="modal-footer">
-	            <button type="button" class="btn btn-default" 
+	            <button type="button" class="btn btn-default"
 	               data-dismiss="modal">取消
 	            </button>
 	            <button type="button" class="btn btn-primary confirm">
