--- a/Application/Home/View/Website/index.html
+++ b/Application/Home/View/Website/index.html
@@ -11,10 +11,9 @@
 </block>
 <block name="content">
 	<input id="delete_site_url" type="hidden" value="__CONTROLLER__/delete_site">
-	<input id="compile_site_url" type="hidden" value="{:U('Panel/index')}">
+	<input id="compile_site_url" type="hidden" value="__CONTROLLER__/toPanel">
 	<input id="download_site_url" type="hidden" value="__CONTROLLER__/download_site">
-	
-	<input id="resource_management_site_url" type="hidden" value="__CONTROLLER__/album_list">
+	<input id="resource_management_site_url" type="hidden" value="__CONTROLLER__/toResource">
 	<div class="centent-head">
 		网站列表
 	</div>
@@ -77,12 +76,12 @@
 	</div>
 	</if>
 	<!-- 模态框（Modal） -->
-	<div class="modal fade" id="myModal" tabindex="-1" role="dialog" 
+	<div class="modal fade" id="myModal" tabindex="-1" role="dialog"
 	   aria-labelledby="myModalLabel" aria-hidden="true">
 	   <div class="modal-dialog">
 	      <div class="modal-content">
 	         <div class="modal-header">
-	            <button type="button" class="close" 
+	            <button type="button" class="close"
 	               data-dismiss="modal" aria-hidden="true">
 	                  &times;
 	            </button>
@@ -103,7 +102,7 @@
 				</form>
 	         </div>
 	         <div class="modal-footer">
-	            <button type="button" class="btn btn-default" 
+	            <button type="button" class="btn btn-default"
 	               data-dismiss="modal">关闭
 	            </button>
 	            <button id="create_new_site" type="button" target_url="__CONTROLLER__/add_site" class="btn btn-primary">
@@ -115,12 +114,12 @@
 	</div>
 
 	<!-- 模态框（Modal） -->
-	<div class="modal fade" id="confirm_modal" tabindex="-1" role="dialog" 
+	<div class="modal fade" id="confirm_modal" tabindex="-1" role="dialog"
 	   aria-labelledby="myModalLabel" aria-hidden="true">
 	   <div class="modal-dialog">
 	      <div class="modal-content">
 	         <div class="modal-header">
-	            <button type="button" class="close" 
+	            <button type="button" class="close"
 	               data-dismiss="modal" aria-hidden="true">
 	                  &times;
 	            </button>
@@ -136,7 +135,7 @@
 				</form>
 	         </div>
 	         <div class="modal-footer">
-	            <button type="button" class="btn btn-default" 
+	            <button type="button" class="btn btn-default"
 	               data-dismiss="modal">取消
 	            </button>
 	            <button type="button" class="btn btn-primary confirm">
