--- a/Application/Home/View/Panel/article_sort.html
+++ b/Application/Home/View/Panel/article_sort.html
@@ -34,7 +34,6 @@
 						<form id="type_data">
 							<ul>
 								<li><span></span><span class="content">分类</span><span class="select_span">栏目</span></li>
-								<li><span></span><span class="content">分类</span><span class="select_span">栏目</span></li>
 							<volist name="type_list" id="vo">
 								<li>
 								<span><input class="type_checkbox" id="sort_{$vo.id}" type="checkbox" name="type[]" value="{$vo.id}">
@@ -62,6 +61,8 @@
 	</div>
 	<input type='hidden' id="controller-id" value="{$controller_id}">
 	<input id="status" type="hidden" name="" value="{$status}">
+	<input id="save-url" type="hidden" value="{:U('panel/save_widget')}">
+
 </body>
 </html>
 				<!-- <fieldset>
