--- a/Application/Home/View/Article/add_article.html
+++ b/Application/Home/View/Article/add_article.html
@@ -1,6 +1,6 @@
 <extend name="Website/base"/>
 <block name="style">
-	<link rel="stylesheet" type="text/css" href="__CSS__/website/add_article.css">
+	<link rel="stylesheet" type="text/css" href="__CSS__/article/add_article.css">
 	<link rel="stylesheet" type="text/css" href="__STATIC__/ueditor/themes/default/css/ueditor.css">
 	<script type="text/javascript" src="__STATIC__/ueditor/ueditor.config.js"></script>
 	<script type="text/javascript" src="__STATIC__/ueditor/ueditor.all.js"></script>
@@ -10,19 +10,12 @@
 <block name='senior-nav'>
 	<div class="site-name-show">{$site_name}</div>
 </block>
-<block name="side">
-	<div class="side">
-		<div class="side-head">网站资源</div>
-		<div class="side-item"><a href="__CONTROLLER__/album_list/site_id/{$site_id}">相册</a></div>
-		<div class="side-item"><a href="__CONTROLLER__/article_list/site_id/{$site_id}">文章</a></div>
-	</div>
-</block>
 <block name="content">
 	<div class="centent-head">添加文章</div>
 	<!-- <input id="create_album_url" type="hidden" value="__CONTROLLER__/create_album">
 	<input id="edit_album_url" type="hidden" value="__CONTROLLER__/edit_album">
 	<input id="del_album_url" type="hidden" value="__CONTROLLER__/del_album"> -->
-	<input id="article-url" type="hidden" value="__CONTROLLER__/article_list/site_id/{$site_id}">
+	<input id="article-url" type="hidden" value="__CONTROLLER__/index">
 	<div class="add-article-panel">
 			<if condition="$is_edit eq 1">
 				<form action="__CONTROLLER__/edit_article" id="article-form">
@@ -107,5 +100,5 @@
 
 </block>
 <block name="script">
-	<script type="text/javascript" src="__JS__/website/add_article.js"></script>
+	<script type="text/javascript" src="__JS__/article/add_article.js"></script>
 </block>
