--- a/Application/Home/View/Widget/ArticleSort/first_theme.html
+++ b/Application/Home/View/Widget/ArticleSort/first_theme.html
@@ -1,3 +1,4 @@
+{$option|dump}
 <div class='article_container controller' data-id="{$cname}">
 	<div class='controller-title'>{$option['title']}</div>
 	<div class='article_sort'>
